[flake8]
max-line-length = 100

[metadata]
license_files = LICENSE

[mypy]
ignore_missing_imports = True

[pylint.MESSAGES_CONTROL]

# This controls the checks that pylint ignores.
#
# If you add to this list, please keep it in
# alphabetical order.
#
# to list all possibilities, run:
#
#     pylint --list-msg
#
disable=
    import-error,
    invalid-name,
    protected-access,
    too-few-public-methods
